--- a/article/main.tex
+++ b/article/main.tex
@@ -99,16 +99,20 @@ Three categories of observational tracer are useful for studying disk structures
 
 
 \subsubsection{Scattered Light}
-Small ($\mu$m-sized) dust grains suspended in the disk atmosphere can reflect the optical and infrared radiation emitted by the the central host star.  This scattered light is especially sensitive to the vertical distribution of the dust, and how it changes with radius \citep[e.g.,][]{debes13,stolker16,garufi17}.  Spectral and polarization variations in the scattered light morphology can constrain the albedo and phase function of the scatterers, which are set by the size, shape, and composition of the grains \citep{debes08,min12,min16}.  Aside from uniquely probing the dust disk surface geometry, the key advantage of this tracer is resolution: adaptive optics systems operating at the diffraction limit on 8--10 m telescopes measure features at 30--50 mas scales ($\sim$5 au).  The important challenges are contrast with the host stars, which prevent measurements in the innermost disk ($\lesssim 10$ au), and sensitivity at large radii, due to the $1/r^2$ dilution of the stellar radiation field.  The latter issue has limited the sample of resolved scattered light measurements, and biased it toward disks with brighter (earlier type) hosts.    
+Small ($\mu$m-sized) dust grains suspended in the disk atmosphere can reflect the optical and infrared radiation emitted by the the central host star.  This scattered light is especially sensitive to the vertical distribution of the dust, and how it changes with radius \citep[e.g.,][]{debes13,stolker16,garufi17}.  Spectral and polarization variations in the scattered light morphology can constrain the albedo and phase function of the scatterers, which are set by the size, shape, and composition of the grains \citep{debes08,min12,min16}.  Aside from uniquely probing the dust disk surface geometry, the key advantage of this tracer is resolution: adaptive optics systems operating at the diffraction limit on 8--10 m telescopes measure features at 30--50 mas scales ($\sim$5 au).  The important challenges are contrast with the host stars, which prevent measurements in the innermost disk ($\lesssim 10$ au), and sensitivity at large radii, due to the dilution of the stellar radiation field.  The latter issue has limited the sample of resolved scattered light measurements, and biased it toward disks with brighter (earlier type) hosts.    
 
 %The continuum and line emission are thermal radiative processes, so the kind of information about the disk structure available from a given tracer depends on its optical depth, $\tau_\nu$.  If the tracer emission is optically thin ($\tau_\nu \ll 1$), the intensity scales roughly with the product $I_\nu \propto X B_\nu(T) N$, where $B_\nu(T)$ is the Planck function at the local temperature, $N$ is column density, and $X$ is a (potentially complicated) conversion factor that quantifies how much emission is produced per unit mass for that tracer species.  With some information on $X$, $T$, and the disk geometry, a measurement of $I_\nu$ offers a density constraint.  If the emission is optically thick ($\tau_\nu \gtrsim 1$), the intensity scales with the temperature at the effective photosphere of the tracer, $I_\nu \propto B_\nu(T)$.  In this case, only lower bounds on the densities of the tracer species are available, and the emission can be affected by scattering.          
 
 \subsubsection{Continuum Emission}
-Disk solids also emit their own thermal continuum radiation that spans at least four decades in wavelength (from 1 $\mu$m to 1 cm).  Most of that emission is optically thick, and therefore a diagnostic of the temperature structure in the disk \citep[e.g., see][]{andrews15}.  Lower optical depths ($\tau_\nu$) are available at longer wavelengths, with the transition to optically thin traditionally expected in the sub-mm \citep{beckwith90}.  In the optically thin limit ($\tau_\nu \ll 1$), the continuum intensities scale with the product $I_\nu \propto \kappa_\nu B_\nu(T) \Sigma_s$, where $\kappa_\nu$ is the opacity (absorption cross section per unit mass), $B_\nu(T)$ the Planck function at the local temperature $T$, and $\Sigma_s$ the surface density of solids.  The mm continuum spectrum has a roughly power-law shape, $I_\nu \propto \nu^{\alpha_{\rm mm}}$, with the spectral index set by the sum of contributions from the Planck function ($B_\nu \propto \nu^{\alpha_{\rm Pl}}$, where $\alpha_{\rm Pl} \approx 1.7$--2.0 for $T > 15$ K) and the opacity spectrum ($\kappa_\nu \propto \nu^\beta$), $\alpha_{\rm mm} \approx \alpha_{\rm Pl} + \beta$ \citep{beckwith91,ricci10a,ricci10b}.  The opacity index, $\beta$, depends on the sizes, shapes, and compositions of the solids \citep{miyake93,dalessio01,draine06}.  
+Disk solids also emit their own thermal continuum radiation that spans at least four decades in wavelength (from 1 $\mu$m to 1 cm).  Most of that emission is optically thick, and therefore a diagnostic of the temperature structure in the disk \citep[e.g., see][]{andrews15}.  Lower optical depths ($\tau_\nu$) are available at longer wavelengths, with the transition to optically thin traditionally expected in the sub-mm.  In the optically thin limit ($\tau_\nu \ll 1$), the continuum intensities scale with the product $I_\nu \propto \kappa_\nu B_\nu(T) \Sigma_s$, where $\kappa_\nu$ is the opacity (absorption cross section per unit mass), $B_\nu(T)$ the Planck function at the local temperature $T$, and $\Sigma_s$ the surface density of solids.  The mm continuum spectrum has a roughly power-law shape, $I_\nu \propto \nu^{\alpha_{\rm mm}}$, with the spectral index set by the sum of contributions from the Planck function ($B_\nu \propto \nu^{\alpha_{\rm Pl}}$, where $\alpha_{\rm Pl} \approx 1.7$--2.0 for $T > 15$ K) and the opacity spectrum ($\kappa_\nu \propto \nu^\beta$), so $\alpha_{\rm mm} \approx \alpha_{\rm Pl} + \beta$ \citep{beckwith91,ricci10a,ricci10b}.  The opacity index, $\beta$, depends on the sizes, shapes, and compositions of the solids \citep{miyake93,dalessio01,draine06}.  
 
-In principle, resolved measurements of the mm continuum provide an ideal opportunity to constrain the mass distribution (and particle properties) of the disk solids.  This tracer is also relatively easy to observe at high resolution, down to 10--20 mas scales ($\sim$2 au; and no contrast issues with the host), thanks to the large bandwidths of modern interferometers.  This means measurements are plentiful: much of the collective knowledge of resolved disk structures is based on mm continuum observations.  There are two key sources of ambiguity in interpreting these data.  First, some of the emission could be optically thick, perhaps preferentially in the inner disk \citep[see][]{beckwith90,aw05}.  In that case, the intensities saturate to $B_\nu(T)$ and the spectral index reverts to $\alpha_{\rm Pl}$.  Self-scattering could even diminish the intensities below $B_\nu(T)$ and permit $\alpha_{\rm mm}$ to vary in the range 1.5--2.5, depending on the frequency dependence of the albedo \citep{zhu19,liu19}.
+In principle, resolved measurements of the mm continuum provide an ideal opportunity to constrain the mass distribution (and particle properties) of the disk solids.  This broadband tracer is also relatively easy to observe at high resolution, down to 10--20 mas scales ($\sim$2 au; and no contrast issues with the host), thanks to the sensitivity and resolution of ALMA.  This means measurements are plentiful: much of the collective knowledge of resolved disk structures is based on mm continuum data.  There are two key ambiguities in interpreting these data.  First, some of the emission is likely optically thick, perhaps preferentially in the inner disk \citep[see][]{beckwith90,aw05}.  In that case, the intensities saturate to $B_\nu(T)$ and the spectral index reverts to $\alpha_{\rm Pl}$.  Self-scattering could diminish the intensities below $B_\nu(T)$ and permit $\alpha_{\rm mm}$ to vary in the range 1.5--2.5, depending on the frequency dependence of the albedo \citep{zhu19,liu19}.  And second, our relative ignorance of the microphysical particle properties that set $\kappa_\nu$ -- their mineralogical (and ice) compositions \citep{pollack94}, sizes \citep{miyake93}, and structures \citep{henning96} -- means that links between the emission and physical conditions are intrinsically uncertain, even when optical depths are low.
 
 \subsubsection{Spectral Line Emission}
+The dominant constituent by mass in a disk is cold H$_2$ gas.  But, H$_2$ lacks a permanent dipole moment and is therefore essentially `dark': there is no direct probe of the gas mass reservoir.  Instead, constraints on the structure of the gas disk rely on spatially and spectrally resolved measurements of trace molecular rotational transitions throughout the (sub-)mm bands.  Such emission lines can be optically thick or thin.  Like the continuum, optically thick line emission has $I_\nu \propto B_\nu(T)$ (where $T$ is formally the excitation temperature, equivalent to the gas temperature in local thermodynamic equilibrium): the key difference is that the line photosphere (where $\tau_\nu \sim 1$) can be located at a higher altitude above the midplane than the continuum \citep{beckwith93}.  For low optical depths, the line intensity scales with the product of the abundance of molecules of that species, the surface density of the gas, and the temperature, $I_\nu \propto [{\rm X}/{\rm H}_2] \Sigma_g B_\nu(T)$.  In either case, the spatio-kinematic morphology of the line emission is set by the gas dynamics, dominated by Keplerian rotation around the host star \citep{marsh92,koerner93}.  The line width is determined by thermal and non-thermal broadening contributions; the latter is typically associated with turbulence \citep{hughes11}.         
+
+Resolved measurements of multiple optically thick lines with a range of critical densities can be used to trace the temperature structure of the disk atmosphere \citep[e.g.,][]{dartois03}, and optically thin lines can theoretically be used to constrain gas densities.  With sufficient spectral resolution, such emission line datasets can be used to tomographically reconstruct the disk velocity field \citep{simon00,rosenfeld13a} and assess the level of turbulence \citep{guilloteau12,flaherty15}.  ALMA is in principle capable of resolving such line emission at tens of milliarcsecond scales ($\sim$2--5 au) in few m s$^{-1}$-wide velocity channels, but the narrow bandwidths and relatively low abundances of trace molecular species mean that sensitivity is a perennial challenge (particularly when optical depths are low).  Accordingly, line measurements of disks with the requisite sensitivity and resolution are considerably less common than for the continuum.  The two most prominent challenges in interpreting spectral line data are confusion with the emitting layer location (in the typical case where resolution is limited) and the large (potentially orders of magnitude) uncertainties in the molecular abundances (relative to H$_2$).         
+%In the literature, two tracer molecule options have been considered for $M_g$ constraints: HD (the primary isotopologue of H$_2$) and CO.  The advantage of HD is the simplicity of its associated chemical network, meaning the HD/H$_2$ abundance ratio is known well \citep{bergin13,mcclure16,trapman17}.  But with a ground state transition in the far-infrared (112 $\mu$m), HD measurements are scarce (and currently inaccessible).  CO is a popular alternative, but the rotational lines from the primary isotopologue are very optically thick \citep{beckwith93}.  Therefore, gas mass estimates rely on line luminosity measurements of rarer isotopologues, usually $^{13}$CO and C$^{18}$O together \citep{williamsbest14}.  The advantages of CO tracers are practical, since these lines are (relatively) bright and accessible (with a sequence of transitions throughout the microwave spectrum), but their abundances are more uncertain.  For reference, the utility of a suite of (less favorable) alternative tracers for $M_g$ measurements were explored by \citet{molyarova17}.
 
 
 
@@ -308,7 +312,7 @@ need to catch up.  FIGURE: probably second panel here showing Lmm versus distanc
 \section{FUTURE\ PROSPECTS} \label{sec:future}
 
 
-
+% ACKNOWLEDGMENTS: Seba Perez (for HD 169142 images), James Owen (for advice on reviews), David Wilner (sounding board), 
 
 \begin{figure}[h]
 \includegraphics[width=3in]{SampleFigure}
