--- a/article/references.bib
+++ b/article/references.bib
@@ -6955,6 +6955,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{guilloteau12,
+   author = {{Guilloteau}, S. and {Dutrey}, A. and {Wakelam}, V. and {Hersant}, F. and 
+	{Semenov}, D. and {Chapillon}, E. and {Henning}, T. and {Pi{\'e}tu}, V.
+	},
+    title = "{Chemistry in disks. VIII. The CS molecule as an analytic tracer of turbulence in disks}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1211.4969},
+ keywords = {protoplanetary disks, radio lines: planetary systems, radio lines: stars, circumstellar matter},
+     year = 2012,
+    month = dec,
+   volume = 548,
+      eid = {A70},
+    pages = {A70},
+      doi = {10.1051/0004-6361/201220331},
+   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...548A..70G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{guilloteau14,
    author = {{Guilloteau}, S. and {Simon}, M. and {Pi{\'e}tu}, V. and {Di Folco}, E. and 
 	{Dutrey}, A. and {Prato}, L. and {Chapillon}, E.},
@@ -7921,6 +7940,20 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{horne86,
+   author = {{Horne}, K. and {Marsh}, T.~R.},
+    title = "{Emission line formation in accretion discs}",
+  journal = {\mnras},
+ keywords = {Accretion Disks, Emission Spectra, Line Shape, Line Spectra, Optical Thickness, Spectrum Analysis, Balmer Series, Computational Astrophysics, Doppler Effect, Dwarf Novae, Kepler Laws, Shear Flow, Velocity Distribution},
+     year = 1986,
+    month = feb,
+   volume = 218,
+    pages = {761-773},
+      doi = {10.1093/mnras/218.4.761},
+   adsurl = {http://adsabs.harvard.edu/abs/1986MNRAS.218..761H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{howard10,
    author = {{Howard}, A.~W. and {Marcy}, G.~W. and {Johnson}, J.~A. and 
 	{Fischer}, D.~A. and {Wright}, J.~T. and {Isaacson}, H. and 
@@ -8219,6 +8252,25 @@ archivePrefix = "arXiv",
     pages = {1204-1217},
       doi = {10.1088/0004-637X/704/2/1204},
    adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...704.1204H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{hughes11,
+   author = {{Hughes}, A.~M. and {Wilner}, D.~J. and {Andrews}, S.~M. and 
+	{Qi}, C. and {Hogerheijde}, M.~R.},
+    title = "{Empirical Constraints on Turbulence in Protoplanetary Accretion Disks}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1011.3826},
+ primaryClass = "astro-ph.SR",
+ keywords = {circumstellar matter, protoplanetary disks, stars: individual: HD 163296 TW Hydrae},
+     year = 2011,
+    month = feb,
+   volume = 727,
+      eid = {85},
+    pages = {85},
+      doi = {10.1088/0004-637X/727/2/85},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...727...85H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
